--- a/a4.html
+++ b/a4.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>두번째 페이지</title>
+    <title>네번째페이지</title>
 </head>
 <body>
-    <h1>두번째 페이지 제목</h1>
-    <p>두번째 페이지 내용</p>
+    <h1>네번째 페이지 제목</h1>
+    <p>네번째 페이지 내용</p>
 </body>
 </html>
